# duckdb

./: .db  app.py  appdois.py  banco-duckdb.db.wal  dockerfile  main.ipynb  pyproject.toml
