[tool.poetry]
name = "exploracao-etl-ddb"
version = "0.1.0"
description = ""
authors = ["walter <walterbiel1237@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.3"
kagglehub = "^0.3.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
